Reworked Plugin Menu
Created automated graph and added getopts

change checkgetop location

make snippets top level small

changed getoptsradio to MoreCheckBox

changed getoptstyle to mimic trialbottom

added plugin menu to top level

added word_rn and pluginstopmenu

added missing word_run

removed duplication

added run bottom

fixed wrong log output

added TrayHeight for bigger menu

added more space to avoid overlays in non-englisch version

changed ok into run button

removed duplicated anchor entry

cleanup of plugin dialog box

added space

removed GetPluginsContent

removed duplicates

removed empty functions

changed absgetoptStyle

reworked OptionType

removed optiontype from plugindialog

added handler

--- a/OneMore/Properties/Resources.resx
+++ b/OneMore/Properties/Resources.resx
@@ -3808,6 +3808,10 @@ Help Tab</value>
     <value>Run and manage custom plugins</value>
     <comment>ribbon file</comment>
   </data>
+  <data name="ribPluginsTopMenu_Label" xml:space="preserve">
+    <value>Plugins</value>
+    <comment>ribbon top menu</comment>
+  </data>
   <data name="ribPreviewMarkdownButton_Label" xml:space="preserve">
     <value>Preview Markdown</value>
     <comment>ribbon edit</comment>
@@ -5179,6 +5183,9 @@ Invert</value>
   </data>
   <data name="word_Delete" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="word_Run" xml:space="preserve">
+    <value>Run</value>
   </data>
   <data name="word_Distance" xml:space="preserve">
     <value>Distance</value>
