Avoid strange translsations
Update Resources.de-DE.resx

Corrected german translation

Fixed German translation flaws

removed brotkrümel

--- a/OneMore/Properties/Resources.de-DE.resx
+++ b/OneMore/Properties/Resources.de-DE.resx
@@ -1996,7 +1996,7 @@ Möchten Sie die bestehende Seite aktualisieren?</value>
     <comment>DO NOT TRANSLATE</comment>
   </data>
   <data name="OneMoreTab_Label" xml:space="preserve">
-    <value>Einer noch</value>
+    <comment>DO NOT TRANSLATE</comment>
   </data>
   <data name="oneNamespace" xml:space="preserve">
     <value>http://schemas.microsoft.com/office/onenote/2013/onenote</value>
@@ -3368,8 +3368,7 @@ Registerkarte „Hilfe“.</value>
     <comment>ribbon snippets</comment>
   </data>
   <data name="ribInsertBreadcrumbButton_Label" xml:space="preserve">
-    <value>Brotkrümel</value>
-    <comment>ribbon snippets menu</comment>
+    <comment>DO NOT TRANSLATE</comment>
   </data>
   <data name="ribInsertBreadcrumbButton_Screentip" xml:space="preserve">
     <value>Breadcrumb der Seitenposition oben auf der Seite einfügen</value>
@@ -3428,7 +3427,7 @@ Registerkarte „Hilfe“.</value>
     <comment>ribbon snippets</comment>
   </data>
   <data name="ribInsertExpandButton_Label" xml:space="preserve">
-    <value>Expandieren kollabieren</value>
+    <value>Ein- und Ausklappen</value>
     <comment>Ribbon OneMore menu item, Snippets...</comment>
   </data>
   <data name="ribInsertExpandButton_Screentip" xml:space="preserve">
@@ -3700,7 +3699,7 @@ Registerkarte „Hilfe“.</value>
     <comment>ribbon</comment>
   </data>
   <data name="ribOneMoreGroup_Label" xml:space="preserve">
-    <value>Einer noch</value>
+    <comment>DO NOT TRANSLATE</comment>
     <comment>Ribbon Group</comment>
   </data>
   <data name="ribOneMoreMenu_Label" xml:space="preserve">
@@ -5141,10 +5140,10 @@ Umkehren</value>
     <value>Untertitel</value>
   </data>
   <data name="word_Clear" xml:space="preserve">
-    <value>Klar</value>
+    <value>Bereinigen</value>
   </data>
   <data name="word_Close" xml:space="preserve">
-    <value>Nah dran</value>
+    <value>Schliessen</value>
   </data>
   <data name="word_Code" xml:space="preserve">
     <value>Code</value>
@@ -5210,7 +5209,7 @@ Umkehren</value>
     <value>Allgemein</value>
   </data>
   <data name="word_Go" xml:space="preserve">
-    <value>gehen</value>
+    <value>Starte</value>
   </data>
   <data name="word_Grayscale" xml:space="preserve">
     <value>Graustufen</value>
@@ -5249,7 +5248,7 @@ Umkehren</value>
     <value>Protokoll</value>
   </data>
   <data name="word_Move" xml:space="preserve">
-    <value>Umzug</value>
+    <value>Bewege</value>
   </data>
   <data name="word_Name" xml:space="preserve">
     <value>Name</value>
@@ -5288,7 +5287,7 @@ Umkehren</value>
     <value>Optionen</value>
   </data>
   <data name="word_Page" xml:space="preserve">
-    <value>Buchseite</value>
+    <value>Seite</value>
   </data>
   <data name="word_PercentSymbol" xml:space="preserve">
     <value>%</value>
@@ -5327,7 +5326,7 @@ Umkehren</value>
     <value>Zeitplan</value>
   </data>
   <data name="word_Scope" xml:space="preserve">
-    <value>Zielfernrohr</value>
+    <value>Bereich</value>
   </data>
   <data name="word_Search" xml:space="preserve">
     <value>Suchen</value>
@@ -5354,7 +5353,7 @@ Umkehren</value>
     <value>Status</value>
   </data>
   <data name="word_Storage" xml:space="preserve">
-    <value>Lager</value>
+    <value>Platz</value>
   </data>
   <data name="word_Style" xml:space="preserve">
     <value>Stil</value>
